[package]
name = "RuSTm"
version = "0.1.0"
authors = ["Dzyunka <mast-94@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rt = "0.6.12"
panic-reset = "0.1.0"

[[bin]]
bench = false
name = "RuSTm"
test = false

[profile.release]
codegen-units = 1
debug = true
lto = true